--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,7 @@
             ]
         }
     },
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
